--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -260,3 +260,14 @@
     background: #35b9cc;
   }
 }
+
+
+.s-i-g{
+  .dropdown{
+    width: 80%;
+  }
+  .s-in{
+    border-top-right-radius: 12px !important;
+    border-bottom-right-radius: 12px !important;
+  }
+}
