++Added Mag Functionality

--- a/src/app/feature-modules/user/home-con/home-page/home-page.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/home-page.component.html
@@ -234,7 +234,9 @@
       </div>
 
       <div class="c-c-b">
-        <button class="btn btn-sm btn-dark" (click)="createContent()"><i class="fa fa-camera-retro"></i></button>
+        <button class="btn btn-sm btn-dark n-p" (click)="createContent(2)"><i class="fa fa-newspaper-o"></i></button>
+        <button class="btn btn-sm btn-dark" (click)="createContent(1)"><i class="fa fa-camera-retro"></i></button>
+
       </div>
 
     </div>
