--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -290,64 +290,64 @@
 }
 
 .gg {
-  background-color: #bababa;
+  background-color: #bababa !important;
   color: #fff;
   textarea{
-    background-color: #bababa;
+    background-color: #bababa !important;
     color: #fff;
   }
 }
 
 .bb {
-  background-color: #000;
+  background-color: #000 !important;
   color: #fff;
   textarea{
-    background-color: #000;
+    background-color: #000 !important;
     color: #fff;
   }
 }
 
 .dg {
-  background-color: #0fbf76;
+  background-color: #0fbf76 !important;
   color: #fff;
   textarea{
-    background-color: #0fbf76;
+    background-color: #0fbf76 !important;
     color: #fff;
   }
 }
 
 .lb {
-  background-color: #8fe3ff;
+  background-color: #8fe3ff !important;
   //color: #fff;
   textarea{
-    background-color: #8fe3ff;
+    background-color: #8fe3ff !important;
     //color: #fff;
   }
 }
 
 .db {
-  background-color: #62b4ff;
+  background-color: #62b4ff !important;
   color: #fff;
   textarea{
-    background-color: #62b4ff;
+    background-color: #62b4ff !important;
     color: #fff;
   }
 }
 
 .dp {
-  background-color: #a985cb;
+  background-color: #a985cb !important;
   color: #fff;
   textarea{
-    background-color: #a985cb;
+    background-color: #a985cb !important;
     color: #fff;
   }
 }
 
 .grn {
-  background-color: #87d55d;
+  background-color: #87d55d !important;
   color: #fff;
   textarea{
-    background-color: #87d55d;
+    background-color: #87d55d !important;
     color: #fff;
   }
 }
@@ -356,59 +356,59 @@
 //  background-color: #fef54e;
 //}
 .yy {
-  background-color: #fff889;
+  background-color: #fff889 !important;
   border: 1px solid #ccc66e;
   textarea{
-    background-color: #fff889;
+    background-color: #fff889 !important;
     border: 1px solid #ccc66e;
   }
 }
 
 .rr {
-  background-color: #fe4646;
+  background-color: #fe4646 !important;
   color: #fff;
   textarea{
-    background-color: #fe4646;
+    background-color: #fe4646 !important;
     color: #fff;
   }
 }
 
 .dr {
-  background-color: #ba3040;
+  background-color: #ba3040 !important;
   color: #fff;
   textarea{
-    background-color: #ba3040;
+    background-color: #ba3040 !important;
     color: #fff;
   }
 }
 
 .bb {
-  background-color: #a78a6c;
+  background-color: #a78a6c !important;
   textarea{
-    background-color: #a78a6c;
+    background-color: #a78a6c !important;
   }
 }
 
 .pp {
-  background-color: #fec3f5;
+  background-color: #fec3f5 !important;
   textarea{
-    background-color: #fec3f5;
+    background-color: #fec3f5 !important;
   }
 }
 
 .do {
-  background-color: #e6ae05;
+  background-color: #e6ae05 !important;
   color: #fff;
   textarea{
-    background-color: #e6ae05;
+    background-color: #e6ae05 !important;
     color: #fff;
   }
 }
 
 .oo {
-  background-color: #ffd32d;
+  background-color: #ffd32d !important;
   textarea{
-    background-color: #ffd32d;
+    background-color: #ffd32d !important;
   }
 }
 
