--- a/src/app/feature-modules/user/user/user.component.html
+++ b/src/app/feature-modules/user/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="u-con">
+<div class="u-con" >
 
   <router-outlet></router-outlet>
   <div class="h-menu">
@@ -23,7 +23,7 @@
 
         </div>
         <div class="col">
-          <div class="ii-c"><i class="fa fa-telegram"></i>
+          <div class="ii-c" routerLink="./telegram"><i class="fa fa-telegram"></i>
           </div>
 
         </div>
