--- a/src/app/feature-modules/user/search/search/search.component.html
+++ b/src/app/feature-modules/user/search/search/search.component.html
@@ -62,18 +62,30 @@
     </button>
   </div>
 
-  <!--<div class="s-p-r-p">-->
-  <!--<div class="s-p-r-p-c">-->
-  <!--<div class="sm-c sm-s-l">-->
-  <!--<div class="sm-c-i bcimg" style="background-image: url('./assets/images/background2.jpg')">-->
-  <!--</div>-->
-  <!--<div class="desc-c tab">-->
-  <!--<p class="b">Discover</p>-->
-  <!--<p class="l">If You are offered a seat ...</p>-->
-  <!--</div>-->
-  <!--</div>-->
-  <!--</div>-->
-  <!--</div>-->
+
+
+  <div id="viewport">
+    <ul class="stack" swing-stack [stackConfig]="stackConfig" #myswing1 (throwout)="onThrowOut($event)" >
+      <li swing-card #mycards1   *ngFor="let c of cards; let i = index;" >
+        <!--{{ c.symbol }}-->
+        <p class="hidden">{{i}}</p>
+        <div class="s-p-r-p">
+          <div class="s-p-r-p-c">
+            <div class="sm-c sm-s-l">
+              <div class="sm-c-i bcimg" style="background-image: url('./assets/images/profile3.jpg')">
+              </div>
+              <div class="desc-c tab">
+                <p class="b">{{c.name}}</p>
+                <p class="l">If You are offered a seat ...</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+
 
   <div class="">
 
