--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -107,3 +107,20 @@
   color: #fff;
   margin-bottom: 7px;
 }
+
+
+#viewport{
+  li:last-child{
+    top: -10px !important;
+  }
+  li:nth-last-child(2){
+    width: 98% !important;
+    left: 1% !important;
+    top: -5px !important;
+  }
+  li:nth-last-child(3){
+    width: 96% !important;
+    left: 2% !important;
+  }
+
+}
